tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/eu-west-1/ec2-describe-route-tables.json
{
    "RouteTables": [
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-0f00c56146be3a049",
                    "RouteTableId": "rtb-00815b103a0fe0cb7"
                }
            ],
            "OwnerId": "167389268608",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-00815b103a0fe0cb7",
            "Routes": [
                {
                    "DestinationCidrBlock": "171.88.116.9/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-0b7b37ef4273915b8"
        },
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-0b95149c64f081d51",
                    "RouteTableId": "rtb-0b9e9daa9720a48a5"
                }
            ],
            "OwnerId": "167389268608",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0b9e9daa9720a48a5",
            "Routes": [
                {
                    "DestinationCidrBlock": "249.111.42.112/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-053dca2f7b2213783"
        },
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-4757323c",
                    "RouteTableId": "rtb-5340512a"
                }
            ],
            "OwnerId": "167389268608",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-5340512a",
            "Routes": [
                {
                    "DestinationCidrBlock": "6.168.104.159/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "172.227.123.61/0",
                    "GatewayId": "igw-58cad23f",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-b835dac1"
        }
    ]
}
