tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/eu-west-1/ec2-describe-vpcs.json
{
    "Vpcs": [
        {
            "CidrBlock": "249.111.42.112/16",
            "CidrBlockAssociationSet": [
                {
                    "AssociationId": "vpc-cidr-assoc-0a12908d35f2c1f93",
                    "CidrBlock": "249.111.42.112/16",
                    "CidrBlockState": {
                        "State": "associated"
                    }
                }
            ],
            "DhcpOptionsId": "dopt-f3c49a95",
            "InstanceTenancy": "default",
            "IsDefault": false,
            "OwnerId": "167389268608",
            "State": "available",
            "VpcId": "vpc-053dca2f7b2213783"
        },
        {
            "CidrBlock": "6.168.104.159/16",
            "CidrBlockAssociationSet": [
                {
                    "AssociationId": "vpc-cidr-assoc-a43621cf",
                    "CidrBlock": "6.168.104.159/16",
                    "CidrBlockState": {
                        "State": "associated"
                    }
                }
            ],
            "DhcpOptionsId": "dopt-f3c49a95",
            "InstanceTenancy": "default",
            "IsDefault": true,
            "OwnerId": "167389268608",
            "State": "available",
            "VpcId": "vpc-b835dac1"
        },
        {
            "CidrBlock": "171.88.116.9/16",
            "CidrBlockAssociationSet": [
                {
                    "AssociationId": "vpc-cidr-assoc-0d70332b9dc48c025",
                    "CidrBlock": "171.88.116.9/16",
                    "CidrBlockState": {
                        "State": "associated"
                    }
                }
            ],
            "DhcpOptionsId": "dopt-f3c49a95",
            "InstanceTenancy": "default",
            "IsDefault": false,
            "OwnerId": "167389268608",
            "State": "available",
            "VpcId": "vpc-0b7b37ef4273915b8"
        }
    ]
}
